# middleware

./: .dockerignore  Cargo.toml  Dockerfile  compose.yaml  readme.md
examples/: ecr.rs  pos.rs
nats/: nats.conf
src/: config.rs  connection.rs  handler.rs  lib.rs  main.rs  nats.rs  server.rs  shutdown.rs  utils.rs
tests/: message.rs  multiple.rs  nats.rs
