[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.35.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = { version = "0.3.28", default-features = false, features = ["std", "async-await"] }

[dev-dependencies]
testcontainers = "0.16.7"
